# openclaw-newsletter-ingest

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HANDOFF.md  LICENSE  README.md  SKILL.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  schema.sql  sources.yaml  tsconfig.json
.github/workflows/: ci.yml
scripts/: docker-init-poller.sh  install.sh
skills/oni-cli/agents/: openai.yaml
skills/oni-ingestion-service-builder/: SKILL.md
skills/oni-ingestion-service-builder/agents/: openai.yaml
src/: analyzer.ts  cli.ts  config.ts  cycle.ts  db.ts  poller.ts  semantic.ts  status.ts  systemd.ts  worker.ts
src/openclaw_newsletter_ingest/: __init__.py  cli.py  config.py  db.py  parser.py  poller.py
test/: cli.test.ts  config.test.ts  db.test.ts  semantic.test.ts  systemd.test.ts
