[project]
name = "openclaw-newsletter-ingest"
version = "0.1.0"
description = "Poll Gmail for NYC newsletters, extract events with Claude Sonnet, store in SQLite for an openclaw weekender agent."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "imap-tools>=1.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
nli = "openclaw_newsletter_ingest.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
